# ProjectKisan

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  package-lock.json  pyproject.toml  vercel.json
api/: index.py  predict.py
backend/: agroaid.db  requirements.txt  train_model.py  train_pest_model.py.tmp
backend/app/: database.py  main.py
backend/app/api/routes/: auth.py  damage.py  predict.py  weather.py
backend/app/dependencies/: auth.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  prediction.py
backend/app/services/: disease_model.py  token.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: auth.js  prediction.js
frontend/src/components/: DiagnosisVoiceAssistant.jsx  InsuranceClaimAssistant.jsx  LanguageSelectionScreen.jsx  PredictionResultCard.jsx  ProtectedRoute.jsx  UploadPhotoModal.jsx  VoiceInputButton.jsx
frontend/src/context/: AuthContext.jsx  LanguageContext.jsx
frontend/src/translations/: en.js  hi.js
frontend/src/utils/: dashboardMockData.js  diagnosisSpeech.js
