[project]
name = "project-kisan-backend"
version = "0.1.0"
description = "FastAPI backend for ProjectKisan deployment"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20",
  "pillow==12.0.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.1.3",
  "PyJWT==2.9.0",
  "SQLAlchemy==2.0.36"
]
